<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_Uam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:layout_margin="12dp"
        android:background="@color/azul5"
        android:text="@string/uam"
        android:textColor="@color/blanco"
        android:textSize="@dimen/large"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:layout_below="@id/tv_Uam"
        android:layout_margin="12dp"
        android:background="@color/azul5"
        android:text="@string/activity1"
        android:textColor="@color/blanco"
        android:textSize="@dimen/large"
        android:textStyle="bold" />
    <Button
        android:id="@+id/btn_enviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/azul5"
        android:textColor="@color/blanco"
        android:textSize="@dimen/large"
        android:textStyle="normal"
        android:text="@string/enviar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/nombre"
        android:id="@+id/tv_nombre"
        android:layout_below="@+id/tv_activity"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/correo"
        android:id="@+id/tv_correo"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/hintn"
        android:ems="10"
        android:id="@+id/edt_nombre"
        android:layout_alignTop="@+id/tv_nombre"
        android:layout_toEndOf="@+id/tv_nombre" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/hintc"
        android:ems="10"
        android:id="@+id/edt_correo"
        android:layout_centerVertical="true"
        android:layout_alignEnd="@+id/edt_nombre" />


</RelativeLayout>
